# ReaperForge

./: .gitignore  CMakeLists.txt  ReaperForge.rc  buildEmscripten.sh  downloadEmscripten.sh
docs/: build.sh
res/: ReaperForge.rc  chordBox.frag  chordBoxArpeggio.frag  chordBoxConsecutive.frag  chordBoxFretMute.frag  chordBoxPalmMute.frag  consecutiveChordBoxWorld.frag  default.frag  default.vert  defaultScreen.vert  defaultWorld.frag  defaultWorld.vert  detectedFret.frag  detectedNote.frag  dotInlay.frag  ebeat.frag  font.frag  fretBronze.frag  fretBronzeWorld.frag  fretGold.frag  fretGoldWorld.frag  fretSilver.frag  ground.frag  groundFret.frag  handShapeAnchor.frag  handShapeAnchorWorld.frag  icon.xcf  noteStand.frag  noteStandZero.frag  phrasesScreen.frag  random.txt  reaperForge.blend  scalelengths.txt  string.frag  sustain.frag  test.dds  texture.dds  texture.xcf  textureError.dds  ui.frag  (+1 more)
src/: arrangement.cpp  arrangement.h  base64.cpp  base64.h  bnk.cpp  bnk.h  camera.cpp  camera.h  chordDetector.cpp  chords.cpp  chords.h  chromagram.cpp  chromagram.h  collection.cpp  collection.h  configuration.h  data.cpp  data.h  debug.cpp  debug.h  devutil.h  file.cpp  file.h  font.cpp  font.h  font2.cpp  font2.h  getopt.cpp  getopt.h  global.cpp  global.h  helper.cpp  helper.h  highway.cpp  highway.h  imageload.cpp  imageload.h  inflate.cpp  inflate.h  input.cpp  (+78 more)
src/reaperForge/: camera.cpp  font.cpp  font.h  global.h  helper.cpp  helper.h  input.cpp  log.cpp  opengl.cpp  opengl.h  picopng.h  settings.cpp  shader.cpp  sound.cpp  sound.h  sprite.h  type.h  typedefs.h  zorder.cpp  zorder.h
tools/: build.bat  build.sh  gear.cpp  obj.cpp  png.cpp
tools/bnk.exe/: bnk.cpp  build.bat  build.sh
tools/bnkPlugin.dll/: bnkPlugin.cpp  bnkPlugin.vcxproj  build.bat
tools/bnkReverseProject.exe/: Debug_StaticCRT_vc120.props  Debug_vc120.props  NDebug_StaticCRT_vc120.props  NDebug_vc120.props  bnkReverseProject.vcxproj  main.cpp
tools/gear.exe/: build.bat  build.sh  gear.cpp
tools/obj.exe/: build.bat  build.sh  obj.cpp
tools/png.exe/: build.bat  build.sh
website/: build.sh  downloadEmscripten.sh  index.html
